--- a/app/src/main/res/layout/content_presentation.xml
+++ b/app/src/main/res/layout/content_presentation.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/content_presentation"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:background="@drawable/main_gradient">
 
