--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="sky_light">#81A9D3</color>
     <color name="sky_dark">#4685DA</color>
+    <color name="cloud_light">#9da1a4</color>
+    <color name="cloud_dark">#7c8180</color>
     <color name="sky_font">#c7dbf4</color>
     <color name="card_back">#E9000000</color>
 </resources>
