--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="sky_dark">#4685DA</color>
     <color name="cloud_light">#9da1a4</color>
     <color name="cloud_dark">#7c8180</color>
-    <color name="sky_font">#c7dbf4</color>
+    <color name="snow_light">#b2bcc4</color>
+    <color name="snow_dark">#929b9d</color>
+    <color name="sky_font">#e3e4e8</color>
     <color name="card_back">#E9000000</color>
 </resources>
