--- a/app/src/main/res/layout/part_layout.xml
+++ b/app/src/main/res/layout/part_layout.xml
@@ -144,8 +144,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pressure_fact" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-<!--
+</androidx.constraintlayout.widget.ConstraintLayout><!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
