--- a/app/src/main/res/layout/part_layout.xml
+++ b/app/src/main/res/layout/part_layout.xml
@@ -22,8 +22,7 @@
             android:background="@android:color/transparent"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
-            android:textColor="@color/sky_font"
-            android:visibility="invisible" />
+            android:textColor="@color/sky_font" />
 
         <TextView
             android:id="@+id/part_name"
@@ -37,7 +36,6 @@
             android:layout_marginStart="8dp"
             android:textColor="@color/sky_font"
             android:textSize="20sp"
-            android:visibility="invisible"
             tools:layout_editor_absoluteY="42dp" />
 
         <TextView
@@ -51,8 +49,7 @@
             android:gravity="center"
             android:paddingTop="8dp"
             android:textColor="@color/sky_font"
-            android:textSize="24sp"
-            android:visibility="invisible" />
+            android:textSize="24sp" />
 
     </LinearLayout>
 
@@ -144,104 +141,4 @@
         app:layout_constraintTop_toBottomOf="@+id/pressure_fact" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout><!--
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_margin="4dp"
-android:gravity="center"
-android:orientation="vertical">
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:layout_margin="4dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    tools:ignore="UseCompoundDrawables">
-
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop"
-        android:textColor="@color/sky_font"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/part_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/navigo_medium"
-        android:paddingStart="4dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="0dp"
-        android:textColor="@color/sky_font"
-        android:textSize="20sp"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/avg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/navigo_medium"
-        android:gravity="center"
-        android:paddingTop="8dp"
-        android:textColor="@color/sky_font"
-        android:textSize="24sp"
-        android:visibility="invisible" />
-
-</LinearLayout>
-
-<TextView
-    android:id="@+id/temp_min"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:fontFamily="@font/navigo_regular"
-    android:gravity="center"
-    android:textColor="@color/sky_font"
-    android:textSize="20sp"
-    android:visibility="invisible" />
-
-<TextView
-    android:id="@+id/pressure"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:fontFamily="@font/navigo_regular"
-    android:gravity="center"
-    android:textColor="@color/sky_font"
-    android:textSize="20sp"
-    android:visibility="invisible" />
-
-<TextView
-    android:id="@+id/wind_speed"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:fontFamily="@font/navigo_regular"
-    android:gravity="center"
-    android:textColor="@color/sky_font"
-    android:textSize="20sp"
-    android:visibility="invisible" />
-
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="24dp"
-    android:alpha="0"
-    android:contentDescription="@string/app_name" />
-
-</LinearLayout>
-
--->
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
